# WeHub-Network-Substarte

./: Makefile  README.md
keys/: .local-chain-keys  local-node-0-aura.json  local-node-0-whub.json  local-node-1-aura.json  local-node-1-grandpa.json  local-node-1-whub.json
modules/interface/: package.json
modules/interface/public/: index.html
modules/interface/src/: AllEvents.js  App.js  Bets.js  Events.js  NFTs.js  PotBalance.js  SessionId.js
modules/interface/src/config/: production.json  types.json
modules/svg-bonanza/: .env.local.template  README.md  package.json
modules/svg-bonanza/public/: manifest.json
modules/svg-bonanza/src/pages/: index.tsx
modules/svg-bonanza/src/pages/api/: README.md  create-erc721-metadata.ts  generate-svg.ts
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/wehub/: Cargo.toml  types.json
pallets/wehub/src/: group_by.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
